1999-07-21    <redman@scriptics.com>
	
	* unix/Makefile.in: Added the Windows configure script to the
	distribution file list, already shipping configure.in and the .m4
	files, but needed the configure script itself.
	
	* win/makefile.vc: Changed version number of DDE package in VC++
	makefile to use 1.1 instead of 1.0.

	* doc/open.n: Added documentation of \\.\comX notation for opening
	serial ports on Windows (alternative to comX:).
	
	* tests/ioCmd.test:
	* doc/open.n:
	* win/tclWinSerial.c: Applied patch from Rolf Schroedter to add
	-pollinterval option to fconfigure to modify the maxblocktime used
	in the fileevent polling. Added documentation and fixed the test
	case as well.
	
	* win/tclWinSock.c: Modified 8.1.0 version of the Win32 socket
	driver to move the handling of the socket event window in a
	separate thread.  It also turned out that Win95 & Win98 were, in
	some cases, getting multiple FD_ACCEPTs but only handling one.
	Added a count for the FD_ACCEPT to take care of this.  Tested on
	NT4 SP3, NT4 SP4, Win95, and Win98.
	[Bug: 2178 2256 2259 2329 2323 2355]

1999-07-21    <jpeek@scriptics.com>

	* README: Small tweaks to clean up typos and wording.

1999-07-20  Melissa Hirschl  <hershey@matisse.scriptics.com>

	* generic/tclInitScript.h: 
	* unix/tclUnixInit.c: merged code with 8.0.5.  We now use an
	intermediate global tcl var "tclDefaultLibrary" to keep the
	"tcl_library" var from being set by the default value in the
	Makefile.  Also fixed a bug in which caused the value of
	TCL_LIBRARY env var to be ignored.
	* unix/tclWinInit.c: just updated some comments.

1999-07-19  Melissa Hirschl  <hershey@matisse.scriptics.com>

	* library/http2.1/http.tcl: updated -useragent text to say version
	2.1.

1999-07-16    <redman@scriptics.com>

	* generic/tcl.decls:
	* generic/tclDecls.h:
	* generic/tclStubInit.c:  Add Tcl_SetNotifier to stub table.
	[Bug: 2364]
	
	* unix/aclocal.m4:
	* unix/tcl.m4:  Add check for Alpha/Linux to correct the IEEE