@@ -4,7 +4,7 @@
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 '\" 
-'\" RCS: @(#) $Id: Utf.3,v 1.5 1999/05/06 19:14:42 stanton Exp $
+'\" RCS: @(#) $Id: Utf.3,v 1.6 1999/07/22 01:08:04 redman Exp $
 '\" 
 .so man.macros
 .TH Utf 3 "8.1" Tcl "Tcl Library Procedures"
@@ -88,7 +88,7 @@ The length of the Unicode string in characters.  Must be greater than or
 equal to 0.
 .AP "Tcl_DString" *dstPtr in/out
 A pointer to a previously-initialized \fBTcl_DString\fR.
-.AP size_t n in
+.AP "unsigned long" num in
 The number of characters to compare.
 .AP "CONST char" *start in
 Pointer to the beginning of a UTF-8 string.
